--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     ],
     "license": "MIT",
     "dependencies": {
+        "tsickle": "^0.34.0",
         "tslib": "^1.7.1"
     },
     "peerDependencies": {
@@ -40,14 +41,14 @@
         "@angular/core": ">= 5.0.0"
     },
     "devDependencies": {
-        "@angular/animations": "5.0.0",
-        "@angular/common": "5.0.0",
-        "@angular/compiler": "5.0.0",
-        "@angular/compiler-cli": "5.0.0",
-        "@angular/core": "5.0.0",
-        "@angular/platform-browser": "5.0.0",
-        "@angular/platform-browser-dynamic": "5.0.0",
-        "@angular/platform-server": "5.0.0",
+        "@angular/animations": "^7.1.3",
+        "@angular/common": "^7.1.3",
+        "@angular/compiler": "^7.1.3",
+        "@angular/compiler-cli": "7.1.3",
+        "@angular/core": "^7.1.3",
+        "@angular/platform-browser": "^7.1.3",
+        "@angular/platform-browser-dynamic": "^7.1.3",
+        "@angular/platform-server": "^7.1.3",
         "@compodoc/compodoc": "1.0.3",
         "@types/jasmine": "2.6.2",
         "@types/node": "8.0.47",
@@ -74,7 +75,7 @@
         "ts-loader": "3.1.1",
         "tslint": "5.8.0",
         "tslint-angular": "1.0.0",
-        "typescript": "2.4.2",
+        "typescript": "~3.1.6",
         "uglify-js": "3.1.6",
         "webpack": "3.8.1",
         "zone.js": "0.8.18"
