--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
         "rollup-plugin-license": "0.6.0",
         "rollup-plugin-node-resolve": "3.0.0",
         "rollup-plugin-sourcemaps": "0.4.2",
-        "rxjs": "5.5.2",
+        "rxjs": "^6.2.1",
         "shelljs": "0.7.8",
         "source-map-loader": "0.2.3",
         "ts-loader": "3.1.1",
